// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating component renders the component with self rating 1`] = `
.c0 {
  display: inline-block;
  font-size: 1.5rem;
  font-family: Times;
  line-height: 1;
}

.c0:before {
  content: '●●●●●';
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  background: linear-gradient(90deg,gold 100%,grey 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Rating component renders the component with star rating 1`] = `
.c0 {
  display: inline-block;
  font-size: 1rem;
  font-family: Times;
  line-height: 1;
}

.c0:before {
  content: '★★★★★';
  -webkit-letter-spacing: 3px;
  -moz-letter-spacing: 3px;
  -ms-letter-spacing: 3px;
  letter-spacing: 3px;
  background: linear-gradient(90deg,gold 80%,grey 80%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

<div>
  <div
    class="c0"
  />
</div>
`;
